<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <ImageView
        android:id="@+id/picCart"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gray_rag_bng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/picCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feeEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0iii"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0idsl"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/feeEachItem" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_rag_bng"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/plusCartBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:gravity="center"
            android:text="@string/tru"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:background="@drawable/green_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/_0dj"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/minusCartBtn"
            app:layout_constraintStart_toEndOf="@+id/plusCartBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minusCartBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="22dp"
            android:layout_margin="2dp"
            android:background="@drawable/white_bg_circle"
            android:textColor="@color/green"
            android:text="@string/uy"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/numberItemTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>